[NAVBAR] Fixed alignment.

--- a/src/app/components/navbar/nav-social/nav-social.component.scss
+++ b/src/app/components/navbar/nav-social/nav-social.component.scss
@@ -4,7 +4,7 @@
     grid-area: social;
     
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     grid: $gutter*2;
 
     li a {
